warnings and deprecations